--- a/src/pages/organ/organ.html
+++ b/src/pages/organ/organ.html
@@ -35,6 +35,7 @@ x
                     </div>
                     <div class="day days2" ion-col col-2 col-sm *ngIf="organ.name == 'lungs'">
                             <img src="../assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
+                            <div>Overmorgen</div>
                     </div>
                     <div class="day days2" ion-col col-2 col-sm *ngIf="organ.name != 'lungs'">
                             <img src="../assets/img/status/{{organ.name}}_green.svg"/>
