--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -41,7 +41,7 @@
             <ion-col col-12 col-sm>
                 <div class="resignationDate">
                     Verwachte ontslagdatum:
-                    <strong>1 mei 2018</strong>
+                    <strong>1 mei 2018 <span class="danger">(verlengd)</span></strong>
                 </div>
             </ion-col>
         </ion-row>        
