--- a/src/pages/organ/organ.html
+++ b/src/pages/organ/organ.html
@@ -34,7 +34,7 @@ x
                             <img src="../assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
                     </div>
                     <div class="day days2" ion-col col-2 col-sm *ngIf="organ.name == 'lungs'">
-                            <img src="../assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
+                            <img src="../assets/img/status/{{organ.name}}_orange.svg"/>
                             <div>Overmorgen</div>
                     </div>
                     <div class="day days2" ion-col col-2 col-sm *ngIf="organ.name != 'lungs'">
