--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,17 +9,11 @@
 
 <ion-content>
 
-    <div class="about-header">
-        <img src="assets/img/umcu-logo.png">
-    </div>
+    <div class="about-info">
 
-    <div padding class="about-info">
-
-        <h4>UrStatus Application</h4>
-
-        <p>
-            UrStatus to c your status.
-        </p>
+        <h4>Testomgeving</h4>
+        <div id="tekst" no-padding><p></p></div>
+        <div id="test" no-padding></div>
 
     </div>
 
