--- a/src/pages/organ/organ.html
+++ b/src/pages/organ/organ.html
@@ -8,140 +8,106 @@ x
     <ion-grid no-padding>
         <ion-row class="organ-header">
             <!-- <ion-col class="organ-header-icon" col-12 col-sm col-sm-3>
-                <img src="../assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
+                <img src="assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
             </ion-col> -->
             <ion-col class="organ-summary" col-12 col-sm>
                 <!-- <h1>{{organ.alias}}</h1> -->
                 <div class="timeline" ion-row no-padding col-12 col-sm>
                     <div class="day days2" ion-col col-2 offset-1 col-sm>
-                            <img src="../assets/img/status/{{organ.name}}_grey.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_grey.svg"/>
                             <div>Eergisteren</div>
                     </div>
                     <div class="day days1" ion-col col-2 col-sm *ngIf="organ.name == 'lungs'">
-                            <img src="../assets/img/status/{{organ.name}}_orange.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_orange.svg"/>
                     </div>
                     <div class="day days1" ion-col col-2 col-sm *ngIf="organ.name != 'lungs'">
-                            <img src="../assets/img/status/{{organ.name}}_red.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_red.svg"/>
                     </div>
                     <div class="day today" ion-col col-2 col-sm>
-                            <img src="../assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
                             <div>Vandaag</div>
                     </div>
                     <div class="day days1" ion-col col-2 col-sm *ngIf="organ.name == 'heart'">
-                            <img src="../assets/img/status/{{organ.name}}_green.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_green.svg"/>
                     </div>
                     <div class="day days1" ion-col col-2 col-sm *ngIf="organ.name == 'lungs'">
-                            <img src="../assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_{{evaluateOrganColor(organ.status, organ.boundaries.lower, organ.boundaries.upper)}}.svg"/>
                     </div>
                     <div class="day days2" ion-col col-2 col-sm *ngIf="organ.name == 'lungs'">
-                            <img src="../assets/img/status/{{organ.name}}_orange.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_orange.svg"/>
                             <div>Overmorgen</div>
                     </div>
                     <div class="day days2" ion-col col-2 col-sm *ngIf="organ.name != 'lungs'">
-                            <img src="../assets/img/status/{{organ.name}}_green.svg"/>
+                            <img src="assets/img/status/{{organ.name}}_green.svg"/>
                             <div>Overmorgen</div>
                     </div>
                 </div>
             </ion-col>
         </ion-row>
         <ion-row *ngIf="organ.id">
-            <ion-col col-12 col-sm>
-                <!-- <ion-card class="organ-card organ-questions">
+            <ion-col col-0 col-7>
+                <ion-card class="organ-card">
                     <ion-card-content>
-                        <h2 class="card-title">Vragen</h2>
-                        <small>Vertel ons relevante informatie om ons te helpen in het vinden van het probleem.</small>
+                        <h2 class="card-title">Trends en voorspellingen (12 uur)</h2>
+                        <!-- <small>Metingen</small> -->
                     </ion-card-content>
-                    <ion-list>
-                        <ion-item>
-                            <ion-label>Hoeveel pijn heeft u?</ion-label>
-                            <ion-range min="0" max="10" step="1" snaps="true" color="primary" [(ngModel)]="singleValue4">
-                                    <ion-icon small range-left color="safe" name="happy"> Geen pijn</ion-icon>
-                                    <ion-icon small range-right color="danger" name="sad"> Veel pijn</ion-icon>
-                            </ion-range>
-                        </ion-item>
-                    </ion-list>
-                </ion-card> -->
+                    <ion-card-content *ngIf="organ.name == 'lungs'">
+                        <div id="test">
+                            <p><span class = "orange">EtCO2</span>, <span class = "darkgreen">FiO2</span> en <span class = "steelblue">saturatie</span></p>
+                        </div>
+                    </ion-card-content>
+                    <ion-card-content *ngIf="organ.name == 'lungs'">
+                        <div id="pressure">
+                            <p>Beademing (<span class="steelblue">Driving pressure</span>, <span class="darkgreen">PEEP</span>, <span class="orange">teugvolume</span>)</p>
+                        </div>
+                    </ion-card-content>                    
+                </ion-card>
+            </ion-col>
+            <ion-col col-7 col-sm >
                 <ion-card class="organ-card organ-measurements">
                     <ion-card-content>
-                        <h2 class="card-title">Metingen</h2>
-                        <!-- <small>Metingen</small> -->
+                        <h2 class="card-title">Monitor</h2>
                     </ion-card-content>
                     <ion-list>
                         <ion-item *ngFor="let parameter of organ.parameters">
-                            <!-- <ion-icon item-left name="{{parameter.icon}}"></ion-icon> -->
                             <h3>{{parameter.alias}}</h3>
                                 <div id="container" style="display: block;"	></div>
-                            <ion-note item-right class="{{parameter.measurements[2].color}}">{{parameter.measurements[2].text}}</ion-note>
+                            <ion-note item-right class="{{parameter.measurements[2].color}}">{{parameter.measurements[2].value}} ({{parameter.measurements[2].text}})</ion-note>
                         </ion-item>
                     </ion-list>
-                </ion-card>
-                <ion-card class="organ-card organ-treatments" *ngIf="organ.name == 'lungs'">
-                    <ion-card-content>
-                        <h2 class="card-title">Behandeling</h2>
-                        <!-- <small>Metingen</small> -->
+                    <ion-card-content *ngIf="organ.name == 'lungs'">
+                            <h2 class="card-title">Beademing</h2>
                     </ion-card-content>
-                    <ion-list>
+                    <ion-list *ngIf="organ.name == 'lungs'">
                         <ion-item>
-                            <ion-note item-left><ion-icon item-left name="flask"></ion-icon>Antibiotica is verhoogd</ion-note>
-                        </ion-item>
-                    </ion-list>
-                </ion-card>
-                <ion-card class="organ-card organ-advices" *ngIf="organ.name == 'lungs'">
-                    <ion-card-content>
-                        <h2 class="card-title">Adviezen</h2>
-                        <!-- <small>Metingen</small> -->
-                    </ion-card-content>
-                    <ion-list>
-                        <ion-item>
-                            <ion-note item-left><ion-icon item-left name="walk"></ion-icon>Ademhalingsoefeningen doen</ion-note>
+                            <h3>Modus</h3>
+                            <div id="container" style="display: block;"></div>
+                            <ion-note item-right>Pressure regulated volume controlled (PRVC)</ion-note>
                         </ion-item>
                         <ion-item>
-                            <ion-note item-left><ion-icon item-left name="body"></ion-icon>Bewegen met fysiotherapeut</ion-note>
+                            <h3>FiO2</h3>
+                            <div id="container" style="display: block;"></div>
+                            <ion-note item-right>30% (normaal)</ion-note>
                         </ion-item>
-                    </ion-list>
+                        <ion-item>
+                            <h3>Driving Pressure</h3>
+                            <div id="container" style="display: block;"></div>
+                            <ion-note item-right class="danger">17 cm H20 (hoog)</ion-note>
+                        </ion-item>
+                        <ion-item>
+                            <h3>PEEP</h3>
+                            <div id="container" style="display: block;"></div>
+                            <ion-note item-right>5 cm H20 (normaal)</ion-note>
+                        </ion-item>
+                        <ion-item>
+                            <h3>Teugvolume</h3>
+                            <div id="container" style="display: block;"></div>
+                            <ion-note item-right>7 ml/kg (normaal)</ion-note>
+                        </ion-item>
+                    </ion-list>     
                 </ion-card>
             </ion-col>
-            <!-- <ion-col col-12 col-sm>
-                <ion-card class="organ-card organ-treatment">
-                    <ion-card-content>
-                        <h2 class="card-title">Behandelingen</h2>
-                        <small>Voer deze adviezen uit om uw prognoses te verbeteren.</small>
-                    </ion-card-content>
-                    <ion-list>
-                        <ion-item>
-                            <ion-icon item-left name="moon"></ion-icon>
-                            <h3>Bedrooms</h3>
-                            <ion-note item-right>awds</ion-note>
-                        </ion-item>
-                    </ion-list>
-                </ion-card>
-                <ion-card class="organ-card organ-advice">
-                        <ion-card-content>
-                            <h2 class="card-title">Adviezen</h2>
-                            <small>Voer deze adviezen uit om uw prognoses te verbeteren.</small>
-                        </ion-card-content>
-                        <ion-list>
-                            <ion-item>
-                                <ion-icon item-left name="moon"></ion-icon>
-                                <h3>Bedrooms</h3>
-                                <ion-note item-right>awds</ion-note>
-                            </ion-item>
-                        </ion-list>
-                    </ion-card>    
-                <ion-card class="organ-card organ-information">
-                    <ion-card-content>
-                        <h2 class="card-title">Informatie</h2>
-                        <small>Voer deze adviezen uit om uw prognoses te verbeteren.</small>
-                    </ion-card-content>
-                    <ion-list>
-                        <ion-item>
-                            <ion-icon item-left name="moon"></ion-icon>
-                            <h3>Bedrooms</h3>
-                            <ion-note item-right>awds</ion-note>
-                        </ion-item>
-                    </ion-list>
-                </ion-card>
-            </ion-col> -->
+ 
         </ion-row>        
     </ion-grid>
 </ion-content>
