--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -7,20 +7,26 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content>
-
-    <div class="about-header">
-        <img src="assets/img/umcu-logo.png">
-    </div>
+<ion-content no-padding>
 
     <div padding class="about-info">
 
-        <h4>UrStatus Application</h4>
-
-        <p>
-            UrStatus to c your status.
-        </p>
+        <h4>Beademing</h4>
 
     </div>
+
+
+<!--   <ion-list>
+    <ion-item *ngFor="let item of data">
+      <h2>{{item.time}}</h2>
+      <p>{{item.mon_hf}}</p>
+      <p>{{item.mon_af}}</p>
+      <p>{{item.mon_sat}}</p>
+    </ion-item>
+  </ion-list> -->
+
+ <section class="chart-wrapper">
+    <canvas #lineChart></canvas>
+ </section>
 
 </ion-content>
